# rob5_lego

./: README.md
lego_commander/: CMakeLists.txt  package.xml
lego_commander/launch/: bringup.launch
lego_commander/src/: contol.cpp  test_this.cpp  tf_sub.cpp
lego_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
lego_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5.srdf
lego_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  ur5_moveit_planning_execution.launch  warehouse.launch
lego_robot_description/: urdf.rviz
lego_robot_description/launch/: upload.launch
lego_robot_description/meshes/gripper/: gripper_body.STL  gripper_hinge_1L.STL  gripper_hinge_1R.STL  gripper_motorL.STL
lego_robot_description/urdf/: gripper.xacro  lego_bot.xacro  table.xacro
rob5_lego/: CMakeLists.txt  package.xml
rob5_lego/launch/: all.launch  sim.launch
zero_point_cal/: CMakeLists.txt  package.xml
zero_point_cal/launch/: all.launch  cam.launch
zero_point_cal/src/: marker_detection.cpp  test_things.cpp
